monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4101/A4101.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4101;

grammar A4101 {

  abstract A = "foo";

  B extends A;

  interface C;

  D implements C;

}